--- a/README
+++ b/README
@@ -27,31 +27,31 @@ DATA:          raw corpus  =>  corpus  =>  pairs  =>  counts  =>  vocab
 TRADITIONAL:   counts + vocab  =>  pmi  =>  svd  
 EMBEDDINGS:    pairs  + vocab  =>  sgns  
 
-* raw corpus  =>  corpus
+**raw corpus  =>  corpus**
 - clean_corpus.sh
 - Eliminates non-alphanumeric tokens from the original corpus.
 
-* corpus  =>  pairs
+**corpus  =>  pairs**
 - corpus2pairs.py
 - Extracts a collection of word-context pairs from the corpus.
 
-* pairs  =>  counts
+**pairs  =>  counts**
 - pairs2counts.sh
 - Aggregates identical word-context pairs.
 
-* counts  =>  vocab
+**counts  =>  vocab**
 - counts2vocab.py
 - Creates vocabularies with the words' and contexts' unigram distributions.
 
-* counts + vocab  =>  pmi
+**counts + vocab  =>  pmi**
 - counts2pmi.py
 - Creates a PMI matrix (scipy.sparse.csr_matrix) from the counts.
 
-* pmi  =>  svd
+**pmi  =>  svd**
 - pmi2svd.py
 - Factorizes the PMI matrix using SVD. Saves the result as three dense numpy matrices.
 
-* pairs  + vocab  =>  sgns
+**pairs  + vocab  =>  sgns**
 - word2vecf
 - An external program for creating embeddings with SGNS. For more information, see:
 "Dependency-Based Word Embeddings". Omer Levy and Yoav Goldberg. ACL 2014.
