--- a/README
+++ b/README
@@ -14,8 +14,8 @@ Quick-Start
 1. Download the latest version from BitBucket, unzip, and make sure all scripts have running permissions (chmod 755 *.sh).
 2. Download a text corpus of your choice.
 3. To create word vectors...
-    * ...with SVD over PPMI, use: **corpus2svd.sh**
-    * ...with SGNS, use: **corpus2sgns.sh**
+    * ...with SVD over PPMI, use: *corpus2svd.sh*
+    * ...with SGNS, use: *corpus2sgns.sh*
 4. The vectors should be available in textual format under <output_path>/vectors.txt
 
 
@@ -28,31 +28,31 @@ TRADITIONAL:   counts + vocab  =>  pmi  =>  svd
 EMBEDDINGS:    pairs  + vocab  =>  sgns  
 
 **raw corpus  =>  corpus**  
-* clean_corpus.sh
+* *clean_corpus.sh*  
 * Eliminates non-alphanumeric tokens from the original corpus.
 
 **corpus  =>  pairs**  
-* corpus2pairs.py
+* *corpus2pairs.py*  
 * Extracts a collection of word-context pairs from the corpus.
 
 **pairs  =>  counts**  
-* pairs2counts.sh
+* *pairs2counts.sh*  
 * Aggregates identical word-context pairs.
 
 **counts  =>  vocab**  
-* counts2vocab.py
+* *counts2vocab.py*  
 * Creates vocabularies with the words' and contexts' unigram distributions.
 
 **counts + vocab  =>  pmi**  
-* counts2pmi.py
+* *counts2pmi.py*  
 * Creates a PMI matrix (scipy.sparse.csr_matrix) from the counts.
 
 **pmi  =>  svd**  
-* pmi2svd.py
+* *pmi2svd.py*  
 * Factorizes the PMI matrix using SVD. Saves the result as three dense numpy matrices.
 
 **pairs  + vocab  =>  sgns**  
-* word2vecf
+* *word2vecf*  
 * An external program for creating embeddings with SGNS. For more information, see:  
 "Dependency-Based Word Embeddings". Omer Levy and Yoav Goldberg. ACL 2014.
 
@@ -64,13 +64,13 @@ Evaluation
 hyperwords also allows easy evaluation of word representations on two tasks: word similarity and analogies.
 
 **Word Similarity**  
-* ws_test.py
-* Compares how a representation ranks pairs of related words by similarity versus human ranking.
+* *ws_test.py*  
+* Compares how a representation ranks pairs of related words by similarity versus human ranking.  
 * 5 readily-available datasets
 
 **Analogies**  
-* analogy_test.py
-* Solves analogy questions, such as: "man is to woman as king is to...?" (answer: queen).
-* 2 readily-available datasets
+* *analogy_test.py*  
+* Solves analogy questions, such as: "man is to woman as king is to...?" (answer: queen).  
+* 2 readily-available datasets  
 * Shows results of two analogy recovery methods: 3CosAdd and 3CosMul. For more information, see:  
 "Linguistic Regularities in Sparse and Explicit Word Representations". Omer Levy and Yoav Goldberg. CoNLL 2014.
