--- a/README
+++ b/README
@@ -28,32 +28,32 @@ TRADITIONAL:   counts + vocab  =>  pmi  =>  svd
 EMBEDDINGS:    pairs  + vocab  =>  sgns  
 
 **raw corpus  =>  corpus**  
-* *clean_corpus.sh*  
-* Eliminates non-alphanumeric tokens from the original corpus.
+- *clean_corpus.sh*  
+- Eliminates non-alphanumeric tokens from the original corpus.
 
 **corpus  =>  pairs**  
-* *corpus2pairs.py*  
-* Extracts a collection of word-context pairs from the corpus.
+- *corpus2pairs.py*  
+- Extracts a collection of word-context pairs from the corpus.
 
 **pairs  =>  counts**  
-* *pairs2counts.sh*  
-* Aggregates identical word-context pairs.
+- *pairs2counts.sh*  
+- Aggregates identical word-context pairs.
 
 **counts  =>  vocab**  
-* *counts2vocab.py*  
-* Creates vocabularies with the words' and contexts' unigram distributions.
+- *counts2vocab.py*  
+- Creates vocabularies with the words' and contexts' unigram distributions.
 
 **counts + vocab  =>  pmi**  
-* *counts2pmi.py*  
-* Creates a PMI matrix (scipy.sparse.csr_matrix) from the counts.
+- *counts2pmi.py*  
+- Creates a PMI matrix (scipy.sparse.csr_matrix) from the counts.
 
 **pmi  =>  svd**  
-* *pmi2svd.py*  
-* Factorizes the PMI matrix using SVD. Saves the result as three dense numpy matrices.
+- *pmi2svd.py*  
+- Factorizes the PMI matrix using SVD. Saves the result as three dense numpy matrices.
 
 **pairs  + vocab  =>  sgns**  
-* *word2vecf*  
-* An external program for creating embeddings with SGNS. For more information, see:  
+- *word2vecf*  
+- An external program for creating embeddings with SGNS. For more information, see:  
 "Dependency-Based Word Embeddings". Omer Levy and Yoav Goldberg. ACL 2014.
 
 An example pipeline is demonstrated in: example_test.sh
@@ -64,13 +64,13 @@ Evaluation
 hyperwords also allows easy evaluation of word representations on two tasks: word similarity and analogies.
 
 **Word Similarity**  
-* *ws_test.py*  
-* Compares how a representation ranks pairs of related words by similarity versus human ranking.  
-* 5 readily-available datasets
+- *ws_test.py*  
+- Compares how a representation ranks pairs of related words by similarity versus human ranking.  
+- 5 readily-available datasets
 
 **Analogies**  
-* *analogy_test.py*  
-* Solves analogy questions, such as: "man is to woman as king is to...?" (answer: queen).  
-* 2 readily-available datasets  
-* Shows results of two analogy recovery methods: 3CosAdd and 3CosMul. For more information, see:  
+- *analogy_test.py*  
+- Solves analogy questions, such as: "man is to woman as king is to...?" (answer: queen).  
+- 2 readily-available datasets  
+- Shows results of two analogy recovery methods: 3CosAdd and 3CosMul. For more information, see:  
 "Linguistic Regularities in Sparse and Explicit Word Representations". Omer Levy and Yoav Goldberg. CoNLL 2014.
