--- a/README
+++ b/README
@@ -1,19 +1,25 @@
 # hyperwords: Hyperparameter-Enabled Word Representations #
 
 hyperwords is a collection of scripts and programs for creating word representations, designed to facilitate academic
-research and prototyping of word representations. hyperwords allows you to tune many hyperparameters that are pre-set or
+research and prototyping of word representations. It allows you to tune many hyperparameters that are pre-set or
 ignored in other word representation packages.
 
 hyperwords is free and open software. If you use hyperwords in scientific publication, we would appreciate citations:  
 **"<NAME>" Omer Levy, Yoav Goldberg, and Ido Dagan. <JOURNAL> 2014/5.**
 
 
+## Disclaimer ##
+Running hyperwords may require a lot of computational resources:
+- disk space for independently pre-processing the corpus
+- internal memory for loading sparse matrices
+- significant running time; hyperwords is neither optimized nor multi-threaded
+
 ## Quick-Start ##
 1. Download the latest version from BitBucket, unzip, and make sure all scripts have running permissions (chmod 755 *.sh).
 2. Download a text corpus of your choice.
 3. To create word vectors...
     * ...with SVD over PPMI, use: *corpus2svd.sh*
-    * ...with SGNS, use: *corpus2sgns.sh*
+    * ...with SGNS (skip-grams with negative sampling), use: *corpus2sgns.sh*
 4. The vectors should be available in textual format under <output_path>/vectors.txt
 
 
