--- a/README
+++ b/README
@@ -8,11 +8,15 @@ hyperwords is free and open software. If you use hyperwords in scientific public
 **"<NAME>" Omer Levy, Yoav Goldberg, and Ido Dagan. <JOURNAL> 2014/5.**
 
 
-## Disclaimer ##
+## Requirements ##
 Running hyperwords may require a lot of computational resources:
 - disk space for independently pre-processing the corpus
 - internal memory for loading sparse matrices
 - significant running time; hyperwords is neither optimized nor multi-threaded
+
+hyperwords assumes a *nix shell, and requires Python 2.7 (or later, excluding 3+) with the following packages installed:
+numpy, scipy, sparsesvd.
+
 
 ## Quick-Start ##
 1. Download the latest version from BitBucket, unzip, and make sure all scripts have running permissions (chmod 755 *.sh).
@@ -21,6 +25,8 @@ Running hyperwords may require a lot of computational resources:
     * ...with SVD over PPMI, use: *corpus2svd.sh*
     * ...with SGNS (skip-grams with negative sampling), use: *corpus2sgns.sh*
 4. The vectors should be available in textual format under <output_path>/vectors.txt
+
+To explore the list of hyperparameters, use the *-h* or *--help* option.
 
 
 ##Pipeline##
@@ -31,7 +37,7 @@ The following figure shows the hyperwords' pipeline:
 **EMBEDDINGS:**  pairs  + vocab  =>  sgns  
 
 **raw corpus  =>  corpus**  
-- *clean_corpus.sh*  
+- *scripts/clean_corpus.sh*
 - Eliminates non-alphanumeric tokens from the original corpus.
 
 **corpus  =>  pairs**  
@@ -39,7 +45,7 @@ The following figure shows the hyperwords' pipeline:
 - Extracts a collection of word-context pairs from the corpus.
 
 **pairs  =>  counts**  
-- *pairs2counts.sh*  
+- *scripts/pairs2counts.sh*
 - Aggregates identical word-context pairs.
 
 **counts  =>  vocab**  
@@ -48,14 +54,14 @@ The following figure shows the hyperwords' pipeline:
 
 **counts + vocab  =>  pmi**  
 - *counts2pmi.py*  
-- Creates a PMI matrix (scipy.sparse.csr_matrix) from the counts.
+- Creates a PMI matrix (*scipy.sparse.csr_matrix*) from the counts.
 
 **pmi  =>  svd**  
 - *pmi2svd.py*  
 - Factorizes the PMI matrix using SVD. Saves the result as three dense numpy matrices.
 
 **pairs  + vocab  =>  sgns**  
-- *word2vecf*  
+- *word2vecf/word2vecf*
 - An external program for creating embeddings with SGNS. For more information, see:  
 **"Dependency-Based Word Embeddings". Omer Levy and Yoav Goldberg. ACL 2014.**
 
@@ -65,14 +71,18 @@ An example pipeline is demonstrated in: example_test.sh
 ##Evaluation##
 hyperwords also allows easy evaluation of word representations on two tasks: word similarity and analogies.
 
-**Word Similarity**  
-- *ws_test.py*  
+**Word Similarity**
+- *hyperwords/ws_eval.py*
 - Compares how a representation ranks pairs of related words by similarity versus human ranking.  
 - 5 readily-available datasets
 
 **Analogies**  
-- *analogy_test.py*  
+- *hyperwords/analogy_eval.py*
 - Solves analogy questions, such as: "man is to woman as king is to...?" (answer: queen).  
 - 2 readily-available datasets  
 - Shows results of two analogy recovery methods: 3CosAdd and 3CosMul. For more information, see:  
 **"Linguistic Regularities in Sparse and Explicit Word Representations". Omer Levy and Yoav Goldberg. CoNLL 2014.**
+
+These programs assume that the representation was created by hyperwords, and can be loaded by
+*hyperwords.representations.embedding.Embedding*. Dense vectors in textual format (such as the ones produced by word2vec
+and GloVe) can be converted to hyperwords' format using *hyperwords/text2numpy.py*.
